draft data clean functions added

--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,9 @@
     "    iter_file_paths,\n",
     "    extract_dataframe_from_txt,\n",
     "    extract_dataframe_from_excel,\n",
-    "    # parse_FC_data_1,\n",
+    "    parse_FC_data_1,\n",
     "    parse_FC_data_2,\n",
-    "    # parse_FC_data_3,\n",
+    "    parse_FC_data_3,\n",
     "    save_dataframe_to_excel,\n",
     "    generate_ddl_from_file, ## may be deprecated\n",
     ")"
@@ -43,76 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully extracted from text file: Ar76c.txt\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/Ar76c_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: Ar76f.txt\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/Ar76f_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR79C.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR79C_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR79F.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR79F_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR80C.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR80C_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR80F.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR80F_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR83C.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR83C_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR83F.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR83F_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR85C.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR85C_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR85F.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR85F_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR87C.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR87C_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR87F.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR87F_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR91C.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR91C_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR91F.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR91F_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR95C.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR95C_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from text file: AR95F.TXT\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/AR95F_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1975_constituinte.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1975_constituinte_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1976.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1976_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1979_intercalar.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1979_intercalar_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1980.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1980_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1983.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1983_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1985.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1985_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1987.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1987_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1991.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1991_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1995.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1995_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_1999.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_1999_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_2002.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_2002_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_2005.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_2005_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_2009.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_2009_1.xlsx to Extracted_Data folder\n",
-      "Successfully extracted from Excel file: ar_2011.xls\n",
-      "Successfully saved: ./DATA FILES/Extracted_Data/ar_2011_1.xlsx to Extracted_Data folder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "## Define directories\n",
@@ -156,16 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataframe_infos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m## check dataframes info\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m df_info, ext, base_name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdataframe_infos\u001b[49m:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDataFrame info for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbase_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mprint\u001b[39m(df_info)\n",
+      "\u001b[31mNameError\u001b[39m: name 'dataframe_infos' is not defined"
+     ]
+    }
+   ],
    "source": [
     "## check dataframes info\n",
     "for df_info, ext, base_name in dataframe_infos:\n",
     "    print(f\"DataFrame info for {base_name}:\")\n",
     "    print(df_info)\n",
-    "    print(f\"Source file name: {base_name}\")\n",
-    "    print(f\"Source file type: {ext}\\n\")"
+    "    print(f\"Source file name with extension: {base_name}{ext}\")"
    ]
   },
   {
