--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,11 @@
     "    extract_dataframe_from_excel,\n",
     "    parse_FC_data_1,\n",
     "    parse_FC_data_2,\n",
-    "    parse_FC_data_3,\n",
+    "    parse_FC76_data,\n",
     "    save_dataframe_to_excel,\n",
     "    generate_ddl_from_file, ## may be deprecated\n",
-    ")"
+    ")\n",
+    "import shutil"
    ]
   },
   {
@@ -2368,43 +2369,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully saved Ar76c.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved Ar76f.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR79C.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR79F.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR80C.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR80F.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR83C.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR83F.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR85C.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR85F.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR87C.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR87F.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR91C.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR91F.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR95C.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Successfully saved AR95F.xlsx to ./DATA FILES/parse_FC_1\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1975_constituinte.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1976.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1979_intercalar.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1980.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1983.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1985.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1987.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1991.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1995.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_1999.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_2002.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_2005.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_2009.xlsx: source extension is not '.txt' (found: .xls)\n",
-      "Skipping file ./DATA FILES/Extracted_Data/ar_2011.xlsx: source extension is not '.txt' (found: .xls)\n"
+      "Successfully saved Ar76c.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved Ar76f.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR79C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR79F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR80C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR80F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR83C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR83F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR85C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR85F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR87C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR87F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR91C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR91F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR95C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR95F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1975_constituinte.xlsx to ./DATA FILES/Cleaned_Data/ar_1975_constituinte.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1976.xlsx to ./DATA FILES/Cleaned_Data/ar_1976.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1979_intercalar.xlsx to ./DATA FILES/Cleaned_Data/ar_1979_intercalar.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1980.xlsx to ./DATA FILES/Cleaned_Data/ar_1980.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1983.xlsx to ./DATA FILES/Cleaned_Data/ar_1983.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1985.xlsx to ./DATA FILES/Cleaned_Data/ar_1985.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1987.xlsx to ./DATA FILES/Cleaned_Data/ar_1987.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1991.xlsx to ./DATA FILES/Cleaned_Data/ar_1991.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1995.xlsx to ./DATA FILES/Cleaned_Data/ar_1995.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1999.xlsx to ./DATA FILES/Cleaned_Data/ar_1999.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2002.xlsx to ./DATA FILES/Cleaned_Data/ar_2002.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2005.xlsx to ./DATA FILES/Cleaned_Data/ar_2005.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2009.xlsx to ./DATA FILES/Cleaned_Data/ar_2009.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2011.xlsx to ./DATA FILES/Cleaned_Data/ar_2011.xlsx\n"
      ]
     }
    ],
@@ -2420,7 +2421,7 @@
     "    ## Construct the full file path using the stored base_name and extension\n",
     "    file_path = os.path.join(data_dir, f\"{base_name}.xlsx\")\n",
     "    \n",
-    "    ## Process only Excel files\n",
+    "    ## Process only extracted data which was sourced from .txt files\n",
     "    if file_ext.lower() == \".txt\":\n",
     "        try:\n",
     "            df = extract_dataframe_from_excel(file_path)\n",
@@ -2428,17 +2429,30 @@
     "            print(f\"Error extracting dataframe from {file_path}: {e}\")\n",
     "            continue\n",
     "\n",
-    "        ## Clean the DataFrame using your parse function\n",
+    "        ## Clean the DataFrame using parse_1, then parse_2 functions, in that order\n",
     "        cleaned_df = parse_FC_data_1(df)\n",
-    "\n",
+    "        cleaned_df = parse_FC_data_2(cleaned_df)\n",
+    "        ## Decide how to process the intermediate column based on base_name\n",
+    "        if \"76\" in base_name:\n",
+    "            cleaned_df = parse_FC76_data(cleaned_df)\n",
+    "        else:\n",
+    "            cleaned_df[2] = pd.to_numeric(cleaned_df[2], errors=\"coerce\").astype(\"Int64\")\n",
+    "        \n",
     "        ## Prepare the output file path using the same base name with .xlsx extension\n",
     "        output_file = os.path.join(target_dir, f\"{base_name}.xlsx\")\n",
     "        try:\n",
     "            save_dataframe_to_excel(cleaned_df, output_file)\n",
     "        except Exception as e:\n",
     "            print(f\"Error saving cleaned dataframe for {file_path}: {e}\")\n",
+    "    ## For non-.txt sourced files, copy them directly from data_dir to target_dir.\n",
     "    else:\n",
-    "        print(f\"Skipping file {file_path}: source extension is not '.txt' (found: {file_ext})\")\n"
+    "        source_file = os.path.join(data_dir, f\"{base_name}.xlsx\")\n",
+    "        target_file = os.path.join(target_dir, f\"{base_name}.xlsx\")\n",
+    "        try:\n",
+    "            shutil.copy(source_file, target_file)\n",
+    "            print(f\"Copied file {source_file} to {target_file}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error copying file {source_file}: {e}\")"
    ]
   }
  ],
