data pre-processing FINAL
New function in myMethods for mapping column headers for txt source files
updated notes

--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Main_DDL\n",
+    "# Main_Extract\n",
     "---\n",
-    "## This file is responsible for reading the raw data, cleaning it, and transforming the data into SQL files for implementation in the server containing the database\n",
+    "## This file is responsible for reading and cleaning the raw data.\n",
     "\n",
     "### Import Statements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,9 @@
     "    parse_FC_data_1,\n",
     "    parse_FC_data_2,\n",
     "    parse_FC76_data,\n",
+    "    create_column_mapping,\n",
     "    save_dataframe_to_excel,\n",
-    "    generate_ddl_from_file, ## may be deprecated\n",
+    "    generate_ddl_from_file,\n",
     ")\n",
     "import shutil"
    ]
@@ -45,9 +46,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully extracted from text file: Ar76c.txt\n",
+      "Successfully saved Ar76c.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: Ar76f.txt\n",
+      "Successfully saved Ar76f.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR79C.TXT\n",
+      "Successfully saved AR79C.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR79F.TXT\n",
+      "Successfully saved AR79F.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR80C.TXT\n",
+      "Successfully saved AR80C.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR80F.TXT\n",
+      "Successfully saved AR80F.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR83C.TXT\n",
+      "Successfully saved AR83C.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR83F.TXT\n",
+      "Successfully saved AR83F.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR85C.TXT\n",
+      "Successfully saved AR85C.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR85F.TXT\n",
+      "Successfully saved AR85F.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR87C.TXT\n",
+      "Successfully saved AR87C.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR87F.TXT\n",
+      "Successfully saved AR87F.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR91C.TXT\n",
+      "Successfully saved AR91C.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR91F.TXT\n",
+      "Successfully saved AR91F.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR95C.TXT\n",
+      "Successfully saved AR95C.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from text file: AR95F.TXT\n",
+      "Successfully saved AR95F.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1975_constituinte.xls\n",
+      "Successfully saved ar_1975_constituinte.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1976.xls\n",
+      "Successfully saved ar_1976.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1979_intercalar.xls\n",
+      "Successfully saved ar_1979_intercalar.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1980.xls\n",
+      "Successfully saved ar_1980.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1983.xls\n",
+      "Successfully saved ar_1983.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1985.xls\n",
+      "Successfully saved ar_1985.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1987.xls\n",
+      "Successfully saved ar_1987.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1991.xls\n",
+      "Successfully saved ar_1991.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1995.xls\n",
+      "Successfully saved ar_1995.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_1999.xls\n",
+      "Successfully saved ar_1999.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_2002.xls\n",
+      "Successfully saved ar_2002.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_2005.xls\n",
+      "Successfully saved ar_2005.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_2009.xls\n",
+      "Successfully saved ar_2009.xlsx to ./DATA FILES/Extracted_Data\n",
+      "Successfully extracted from Excel file: ar_2011.xls\n",
+      "Successfully saved ar_2011.xlsx to ./DATA FILES/Extracted_Data\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "## Define directories\n",
@@ -90,7 +158,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This code block is for creating an object which contains metadata about the source files to help filter them before the cleaning step"
+    "### This code block is for creating an object which contains metadata about the source files to help filter them before the cleaning step\n",
+    "This block must be run before running any of the following blocks"
    ]
   },
   {
@@ -1298,9 +1367,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully saved Ar76c.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved Ar76f.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR79C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR79F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR80C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR80F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR83C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR83F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR85C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR85F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR87C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR87F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR91C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR91F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR95C.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Successfully saved AR95F.xlsx to ./DATA FILES/Cleaned_Data\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1975_constituinte.xlsx to ./DATA FILES/Cleaned_Data/ar_1975_constituinte.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1976.xlsx to ./DATA FILES/Cleaned_Data/ar_1976.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1979_intercalar.xlsx to ./DATA FILES/Cleaned_Data/ar_1979_intercalar.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1980.xlsx to ./DATA FILES/Cleaned_Data/ar_1980.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1983.xlsx to ./DATA FILES/Cleaned_Data/ar_1983.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1985.xlsx to ./DATA FILES/Cleaned_Data/ar_1985.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1987.xlsx to ./DATA FILES/Cleaned_Data/ar_1987.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1991.xlsx to ./DATA FILES/Cleaned_Data/ar_1991.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1995.xlsx to ./DATA FILES/Cleaned_Data/ar_1995.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_1999.xlsx to ./DATA FILES/Cleaned_Data/ar_1999.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2002.xlsx to ./DATA FILES/Cleaned_Data/ar_2002.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2005.xlsx to ./DATA FILES/Cleaned_Data/ar_2005.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2009.xlsx to ./DATA FILES/Cleaned_Data/ar_2009.xlsx\n",
+      "Copied file ./DATA FILES/Extracted_Data/ar_2011.xlsx to ./DATA FILES/Cleaned_Data/ar_2011.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "## Define your directories (update these paths accordingly)\n",
@@ -1329,6 +1435,11 @@
     "            cleaned_df = parse_FC76_data(cleaned_df)\n",
     "        else:\n",
     "            cleaned_df[2] = pd.to_numeric(cleaned_df[2], errors=\"coerce\").astype(\"Int64\")\n",
+    "        \n",
+    "        ## Create dictionary to map column names to new names\n",
+    "        col_mapping = create_column_mapping(file_ext, base_name, cleaned_df)\n",
+    "        if col_mapping:\n",
+    "            cleaned_df.rename(columns=col_mapping, inplace=True)\n",
     "        \n",
     "        ## Prepare the output file path using the same base name with .xlsx extension\n",
     "        output_file = os.path.join(target_dir, f\"{base_name}.xlsx\")\n",
@@ -1359,9 +1470,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Generate DDL from the cleaned data files"
-   ]
+   "source": []
   }
  ],
  "metadata": {
