--- a/main_Load.ipynb
+++ b/main_Load.ipynb
@@ -4,6 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## This file is responsible for transforming the prepared data into SQL files for implementation in the server containing the database\n",
+    "### Import statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import io\n",
+    "import openpyxl\n",
+    "from myMethods import (\n",
+    "    iter_filepaths,\n",
+    "    extract_dataframe_from_txt,\n",
+    "    extract_dataframe_from_excel,\n",
+    "    save_dataframe_to_excel,\n",
+    "    generate_ddl_from_file,\n",
+    ")\n",
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Creating SQL DDL/DML scripts to transform the raw excel data into SQL tables"
    ]
   },
@@ -22,7 +51,7 @@
     "    os.makedirs(output_dir)\n",
     "\n",
     "# Loop through every file in the data directory using the iter_file_paths function\n",
-    "for file_path in iter_file_paths(data_dir):\n",
+    "for file_path in iter_filepaths(data_dir):\n",
     "    file_name = os.path.basename(file_path)\n",
     "    \n",
     "    # Process the file using your SQL DDL function\n",
