--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,7 @@
     "import pandas as pd\n",
     "import os\n",
     "import io\n",
-    "import openpyxl\n",
-    "from myMethods import (\n",
-    "    iter_filepaths,\n",
-    "    extract_dataframe_from_txt,\n",
-    "    extract_dataframe_from_excel,\n",
-    "    parse_FC_data_1,\n",
-    "    parse_FC_data_2,\n",
-    "    parse_FC76_data,\n",
-    "    create_column_mapping,\n",
-    "    save_dataframe_to_excel,\n",
-    "    generate_ddl_from_file,\n",
-    ")\n",
+    "import myDataMethods as mDM\n",
     "import shutil"
    ]
   },
@@ -46,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,17 +118,17 @@
     "dataframe_infos = []\n",
     "\n",
     "## Extract data from all files\n",
-    "for file_path in iter_filepaths(DATA_dir):\n",
+    "for file_path in mDM.iter_filepaths(DATA_dir):\n",
     "    file_name = os.path.basename(file_path)\n",
     "    base_name, ext = os.path.splitext(file_name)\n",
     "    \n",
     "    try:\n",
     "        ## Extract data based on file type\n",
     "        if ext.lower() == '.txt':\n",
-    "            df = extract_dataframe_from_txt(file_path, _encoding='cp1252')\n",
+    "            df = mDM.extract_dataframe_from_txt(file_path, _encoding='cp1252')\n",
     "            print(f\"Successfully extracted from text file: {file_name}\")\n",
     "        elif ext.lower() in ['.xls', '.xlsx']:\n",
-    "            df = extract_dataframe_from_excel(file_path)\n",
+    "            df = mDM.extract_dataframe_from_excel(file_path)\n",
     "            print(f\"Successfully extracted from Excel file: {file_name}\")\n",
     "        else:\n",
     "            print(f\"Skipping unsupported file: {file_name}\")\n",
@@ -147,7 +136,7 @@
     "        \n",
     "        ## Export the DataFrame to Excel\n",
     "        output_path = os.path.join(extracted_data_dir, f\"{base_name}.xlsx\")\n",
-    "        save_dataframe_to_excel(df, output_path)\n",
+    "        mDM.save_dataframe_to_excel(df, output_path)\n",
     "        \n",
     "    ## Handle specific exceptions for parsing\n",
     "    except Exception as e:\n",
@@ -164,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1320,16 +1309,16 @@
     "\n",
     "## Build a mapping (dictionary) from base name to original extension using the source data directory.\n",
     "source_file_info = {}\n",
-    "for file_path in iter_filepaths(source_data_dir):\n",
+    "for file_path in mDM.iter_filepaths(source_data_dir):\n",
     "    file_name = os.path.basename(file_path)\n",
     "    base_name, ext = os.path.splitext(file_name)\n",
     "    source_file_info[base_name] = ext.lower()\n",
     "\n",
     "## Now, build the dataframe_infos list from the extracted Excel files.\n",
     "dataframe_infos_list = []\n",
-    "for file_path in iter_filepaths(extracted_data_dir):\n",
+    "for file_path in mDM.iter_filepaths(extracted_data_dir):\n",
     "    try:\n",
-    "        df = extract_dataframe_from_excel(file_path)\n",
+    "        df = mDM.extract_dataframe_from_excel(file_path)\n",
     "        ## Capture the DataFrame info into a string\n",
     "        info_buf = io.StringIO()\n",
     "        df.info(buf=info_buf)\n",
@@ -1339,7 +1328,7 @@
     "        base_name, _ = os.path.splitext(file_name)\n",
     "        \n",
     "        ## Retrieve the original file extension from the mapping\n",
-    "        orig_ext = source_file_info.get(base_name, '.xlsx')\n",
+    "        orig_ext = str(source_file_info.get(base_name, '.xlsx'))\n",
     "        \n",
     "        ## Append the metadata row as [DataFrame info string, original extension, base name]\n",
     "        dataframe_infos_list.append([df_info_str, orig_ext, base_name])\n",
@@ -1367,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1420,31 +1409,31 @@
     "    file_path = os.path.join(data_dir, f\"{base_name}.xlsx\")\n",
     "    \n",
     "    ## Process only extracted data which was sourced from .txt files\n",
-    "    if file_ext.lower() == \".txt\":\n",
+    "    if str(file_ext).lower() == \".txt\":\n",
     "        try:\n",
-    "            df = extract_dataframe_from_excel(file_path)\n",
+    "            df = mDM.extract_dataframe_from_excel(file_path)\n",
     "        except Exception as e:\n",
     "            print(f\"Error extracting dataframe from {file_path}: {e}\")\n",
     "            continue\n",
     "\n",
     "        ## Clean the DataFrame using parse_1, then parse_2 functions, in that order\n",
-    "        cleaned_df = parse_FC_data_1(df)\n",
-    "        cleaned_df = parse_FC_data_2(cleaned_df)\n",
+    "        cleaned_df = mDM.parse_FC_data_1(df)\n",
+    "        cleaned_df = mDM.parse_FC_data_2(cleaned_df)\n",
     "        ## Decide how to process the intermediate column based on base_name\n",
     "        if \"76\" in base_name:\n",
-    "            cleaned_df = parse_FC76_data(cleaned_df)\n",
+    "            cleaned_df = mDM.parse_FC76_data(cleaned_df)\n",
     "        else:\n",
     "            cleaned_df[2] = pd.to_numeric(cleaned_df[2], errors=\"coerce\").astype(\"Int64\")\n",
     "        \n",
     "        ## Create dictionary to map column names to new names\n",
-    "        col_mapping = create_column_mapping(file_ext, base_name, cleaned_df)\n",
+    "        col_mapping = mDM.create_column_mapping(file_ext, base_name, cleaned_df)\n",
     "        if col_mapping:\n",
     "            cleaned_df.rename(columns=col_mapping, inplace=True)\n",
     "        \n",
     "        ## Prepare the output file path using the same base name with .xlsx extension\n",
     "        output_file = os.path.join(target_dir, f\"{base_name}.xlsx\")\n",
     "        try:\n",
-    "            save_dataframe_to_excel(cleaned_df, output_file)\n",
+    "            mDM.save_dataframe_to_excel(cleaned_df, output_file)\n",
     "        except Exception as e:\n",
     "            print(f\"Error saving cleaned dataframe for {file_path}: {e}\")\n",
     "    ## For non-.txt sourced files, copy them directly from data_dir to target_dir.\n",
@@ -1462,6 +1451,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "### cells below are explicitly for testing / debugging purposes"
    ]
   },
