--- a/main_Load.ipynb
+++ b/main_Load.ipynb
@@ -19,14 +19,10 @@
     "import os\n",
     "import io\n",
     "import openpyxl\n",
-    "from myMethods import (\n",
+    "from myDataMethods import (\n",
     "    iter_filepaths,\n",
-    "    extract_dataframe_from_txt,\n",
-    "    extract_dataframe_from_excel,\n",
-    "    save_dataframe_to_excel,\n",
     "    generate_ddl_from_file,\n",
-    ")\n",
-    "import shutil"
+    ")"
    ]
   },
   {
@@ -66,6 +62,51 @@
     "    output_file = os.path.join(output_dir, base_name + '.sql')\n",
     "    \n",
     "    # Write the generated SQL script to the output file\n",
+    "    with open(output_file, 'w') as f:\n",
+    "        f.write(sql_script)\n",
+    "    \n",
+    "    print(f\"SQL script for {file_name} saved to {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### cells below are explicitly for testing / debugging purposes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Directory containing the data files\n",
+    "data_dir = './Data_Selected/'\n",
+    "output_dir = './SQL_scripts/ddl-dml/'\n",
+    "\n",
+    "## Create the output directory if it doesn't exist\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)\n",
+    "\n",
+    "## Loop through every file in the data directory using the iter_file_paths function\n",
+    "for file_path in iter_filepaths(data_dir):\n",
+    "    file_name = os.path.basename(file_path)\n",
+    "    \n",
+    "    ## Process the file using the SQL DDL generation function\n",
+    "    try:\n",
+    "        _, sql_script = generate_ddl_from_file(file_path)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {file_name}: {e}\")\n",
+    "        continue\n",
+    "    \n",
+    "    ## Build the output file name based on the original file's name\n",
+    "    base_name, _ = os.path.splitext(file_name)\n",
+    "    output_file = os.path.join(output_dir, base_name + '.sql')\n",
+    "    \n",
+    "    ## Write the generated SQL script to the output file\n",
     "    with open(output_file, 'w') as f:\n",
     "        f.write(sql_script)\n",
     "    \n",
