--- a/main_server.ipynb
+++ b/main_server.ipynb
@@ -7,21 +7,20 @@
     "# Main_Server\n",
     "---\n",
     "## This file is responsible for establishing the connection to the server in order to interact with the database contained within.\n",
-    "### Here we can write tables to the server as well as read tables from the server and perform queries.\n",
     "---\n",
     "### Import Statements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import statements\n",
     "import psycopg2\n",
     "from psycopg2.extras import execute_values\n",
-    "from myMethods import run_sql_in_server, iter_file_paths, read_data_from_table"
+    "from myDataMethods import iter_filepaths\n",
+    "from myServerMethods import run_sql_in_server, read_table_from_server"
    ]
   },
   {
@@ -63,7 +62,7 @@
    "source": [
     "# run SQL files\n",
     "sql_dir = './sql_scripts/ddl-dml/'  # Directory containing SQL files\n",
-    "for sql_file in iter_file_paths(sql_dir):\n",
+    "for sql_file in iter_filepaths(sql_dir):\n",
     "    try:\n",
     "        run_sql_in_server(sql_file, cur)\n",
     "        print(f\"Successfully executed: {sql_file}\")\n",
@@ -77,6 +76,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "### cells below are explicitly for testing / debugging purposes"
    ]
   },
@@ -86,17 +87,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_data_from_table('ar_1985', cur)\n",
+    "read_table_from_server('ar_1985', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_1987', cur)\n",
+    "read_table_from_server('ar_1987', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_1991', cur)\n",
+    "read_table_from_server('ar_1991', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_1999', cur)\n",
+    "read_table_from_server('ar_1999', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_2002', cur)\n",
+    "read_table_from_server('ar_2002', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_2005', cur)\n",
+    "read_table_from_server('ar_2005', cur)\n",
     "print(f'\\n\\n')"
    ]
   }
